--- a/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
+++ b/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 02:17:48 GMT
+    - Thu, 19 Oct 2017 03:56:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jvl7pocd2inkn5g0oqbiebqjn5; path=/
+    - PHPSESSID=9k8d3i9utrnlha6n2uaa70fal6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 02:17:49 GMT
+recorded_at: Thu, 19 Oct 2017 03:56:59 GMT
