--- a/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
+++ b/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 02:19:40 GMT
+    - Thu, 19 Oct 2017 04:15:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r75bbuockm5hb33m36e55nf985; path=/
+    - PHPSESSID=7cc2d1vmm4l2edapphgtkta483; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 02:19:41 GMT
+recorded_at: Thu, 19 Oct 2017 04:15:39 GMT
