--- a/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
+++ b/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 02:23:40 GMT
+    - Thu, 19 Oct 2017 04:40:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=uh84u6n7ja8kkm271csbdsa4j0; path=/
+    - PHPSESSID=9t0vdhsdg075u5h09m4h8o23k3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 02:23:40 GMT
+recorded_at: Thu, 19 Oct 2017 04:40:14 GMT
