--- a/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
+++ b/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 18 Oct 2017 23:39:50 GMT
+    - Fri, 20 Oct 2017 16:49:32 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=g0pd6fkro8p9g4g9q0n5jjals1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 18 Oct 2017 23:39:51 GMT
+recorded_at: Fri, 20 Oct 2017 16:49:33 GMT
