--- a/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
+++ b/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 03:23:49 GMT
+    - Fri, 20 Oct 2017 17:18:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=qkhgvf329bvis42q8oi8o4o0j3; path=/
+    - PHPSESSID=st94pc6etnfgmqdc8l36u9tjf0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 03:23:50 GMT
+recorded_at: Fri, 20 Oct 2017 17:18:31 GMT
