--- a/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
+++ b/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 03:52:41 GMT
+    - Fri, 20 Oct 2017 17:31:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=tsm61tv370lf5i3b3giojdp9r5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 03:52:41 GMT
+recorded_at: Fri, 20 Oct 2017 17:31:48 GMT
