--- a/house.gov.by/71488deaf54b16030ec2269c0421201f65e259e6.yml
+++ b/house.gov.by/71488deaf54b16030ec2269c0421201f65e259e6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 04:20:18 GMT
+    - Fri, 20 Oct 2017 17:35:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=8llaj9vbvil7905prhh9ice8p1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 04:20:19 GMT
+recorded_at: Fri, 20 Oct 2017 17:35:23 GMT
