--- a/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
+++ b/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 04:30:59 GMT
+    - Fri, 20 Oct 2017 17:37:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=e09esekj2ugvso3she2qoftua5; path=/
+    - PHPSESSID=5epcj870vsv1lmmls3eqr7ukc6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 04:31:00 GMT
+recorded_at: Fri, 20 Oct 2017 17:37:28 GMT
