--- a/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
+++ b/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 03:00:13 GMT
+    - Fri, 20 Oct 2017 17:44:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0h4db2k7t8smmjtossevk79tl5; path=/
+    - PHPSESSID=pg4t97or26otqg1p8dn44vij32; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 03:00:14 GMT
+recorded_at: Fri, 20 Oct 2017 17:44:47 GMT
