--- a/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
+++ b/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 04:10:11 GMT
+    - Fri, 20 Oct 2017 17:55:49 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r90jj6g08ot5ptt9oip27liai0; path=/
+    - PHPSESSID=pj5vjskhbdhrmpec4qeb3dk3o5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 04:10:12 GMT
+recorded_at: Fri, 20 Oct 2017 17:55:50 GMT
