--- a/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
+++ b/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 03:33:39 GMT
+    - Fri, 20 Oct 2017 17:59:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=k5lnnmvvj5bqcqc2p56vsisgn3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 03:33:39 GMT
+recorded_at: Fri, 20 Oct 2017 17:59:29 GMT
