--- a/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
+++ b/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 03:53:54 GMT
+    - Fri, 20 Oct 2017 18:06:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=8ssfpsoo35rb5dnpa5tu6omp33; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 03:53:54 GMT
+recorded_at: Fri, 20 Oct 2017 18:06:54 GMT
