--- a/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
+++ b/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 04:34:30 GMT
+    - Fri, 20 Oct 2017 18:08:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=41rnnh35qh863booec6npkg691; path=/
+    - PHPSESSID=8e20kotmcjttmaqe6o88papgn7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 04:34:31 GMT
+recorded_at: Fri, 20 Oct 2017 18:08:40 GMT
