--- a/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
+++ b/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 03:04:16 GMT
+    - Fri, 20 Oct 2017 18:14:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=iv7nsotfrjufgc8emt3bh8ide3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 03:04:16 GMT
+recorded_at: Fri, 20 Oct 2017 18:14:31 GMT
