--- a/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
+++ b/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 19 Oct 2017 03:35:39 GMT
+    - Fri, 20 Oct 2017 18:21:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=r5tir54veud3c380gg0ilgjbs0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 19 Oct 2017 03:35:39 GMT
+recorded_at: Fri, 20 Oct 2017 18:21:25 GMT
