--- a/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
+++ b/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 17:47:31 GMT
+    - Fri, 20 Oct 2017 18:32:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=69bacblvb88on00knugnd030a0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 17:47:32 GMT
+recorded_at: Fri, 20 Oct 2017 18:32:27 GMT
