--- a/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
+++ b/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:15:44 GMT
+    - Fri, 20 Oct 2017 18:44:28 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=snjpbi76up3lh4f2i4pp7gmf54; path=/
+    - PHPSESSID=c845tmga5fp59b72a0c2c1q4r5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:15:46 GMT
+recorded_at: Fri, 20 Oct 2017 18:44:29 GMT
