--- a/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
+++ b/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 17:46:26 GMT
+    - Fri, 20 Oct 2017 18:48:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=6fag2r9nie6e5b0fsoc5q7t0v4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 17:46:27 GMT
+recorded_at: Fri, 20 Oct 2017 18:48:56 GMT
