--- a/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
+++ b/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 17:54:57 GMT
+    - Fri, 20 Oct 2017 19:04:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=1lane19dg3k8umov3mo6dfd9d2; path=/
+    - PHPSESSID=s3nartimep5eldsmqum3pjqah3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 17:54:58 GMT
+recorded_at: Fri, 20 Oct 2017 19:04:13 GMT
