--- a/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
+++ b/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:00:28 GMT
+    - Fri, 20 Oct 2017 19:10:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=epeprh7oodr6o4atlhpnqi6350; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:00:29 GMT
+recorded_at: Fri, 20 Oct 2017 19:10:01 GMT
