--- a/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
+++ b/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:14:31 GMT
+    - Fri, 20 Oct 2017 19:22:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=9r0jmes1o4ulur466lmdqvpla3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:14:31 GMT
+recorded_at: Fri, 20 Oct 2017 19:22:44 GMT
