--- a/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
+++ b/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 17:16:50 GMT
+    - Fri, 20 Oct 2017 19:28:34 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=h7kfhd796cc8m0cvo2i42a7013; path=/
+    - PHPSESSID=ho6to2q5qf6ts0ggkkqctqbl92; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 17:16:50 GMT
+recorded_at: Fri, 20 Oct 2017 19:28:35 GMT
