--- a/house.gov.by/926c98f652fe842fdc133d493ebc3221651e44da.yml
+++ b/house.gov.by/926c98f652fe842fdc133d493ebc3221651e44da.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 17:05:38 GMT
+    - Fri, 20 Oct 2017 19:29:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=tb6qiurulg4the052ho3q40st0; path=/
+    - PHPSESSID=j0kehv1be47pk48unccn78r751; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 17:05:38 GMT
+recorded_at: Fri, 20 Oct 2017 19:29:46 GMT
